lab1/Test/L1-A-11-3.output
Error Type B at Line 13
Error Type B at Line 24
Error Type B at Line 36
