lab1/Test/L1-A-11-3.cmm
struct {
};
int l_wCLG , N1UDM1 

;
struct duS5n1hzxHRhJT0 {
  int DmHCuVecW8th5nvdaobw ;
}rl8xgScce_iuqEuO ( struct p7e XKVW3Q8vJAQ6rcJgyS6q 
  , int mQUWzvxGPe50D05w ) {
  int y2ymqAI3Q7AOSoMwF3 ;
  float JTw , bpqg49oiNHyQKKqU [ 286665130 ] = EmYRX2QDopMM 
    || uPueRFsLkM && dc6nyOPs8o <= E + xsOg0VdFaXa [ a50fy7J 
    = Ch1B1KHV == HAxNjhepvFmfAdhDD - * - ! e5dn ( EqqD 
    || zyZQKNz22_m0 / ( EBmXAwA && uUmbtBiA8 < _d_0Rj9rhssqzIM6 
    [ - ( J + ( Fzjzkr3cEr0DhBOBw6s <= ! ( Xi5NAeSOU != 
    ( sY6HudS > ( F0H3F && ePzkjMGSgeiJ4umqfS + f_Gs36j5iXkvYU4bq8s 
    * ( oFvJ [ Kv_jtFc_F || LY && ffEDPR2fbKSpo9UZAfNQ 
    >= ( HX ( RSMqlCbaHJkoOR , nuFvWu89iR ) ) * BuG2F6Vu226Fg8xM 
    ] ) ) <= qZIz0rgQz ) ) - hDB3qcS9kwm && QQ - r_LN2yIsMy9pzvelg 
    ) ) . CAMVMq07gI0akz7H ] - v5vvblCR != T >= pxFIyJVHXj0B0nfcx5V 
    ) * 1738465759 . sbt > HxthV6I ( ) / 1709709165.511603589 
    ) ] . LEiJkS0ZjJJ ;
}
if int _WQTxumV2EsN7NZ ( ) {
}
int gfaw ( ) {
  if ( w2RubDuXNf )   if ( Qa6ruW )   Yc7DZlTIVjjIs6p 
    ;
else   return skIHl_l ;


}
int rqyshX2Fn7xRyRXgS3Ga ( ) {
}
int ;
int || ;
int mV ( ) {
{
    if ( SsM1TNkBtxYM )     sVoC4uvz_7atAa ;
else     if ( rXKk5 )     while ( rsBtfhtuFEx_rU0rel2t 
      )     dypnodPTz5 ;



  }}
